--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -27,7 +27,7 @@ env:
 
 jobs:
   build:
-    if: github.repository == 'apache/skywalking-eyes'
+    if: github.repository == 'jiang1997/skywalking-eyes'
     runs-on: ubuntu-latest
     permissions:
       contents: read
